Fix: adjust project JDK version to 17